<resources>
    <string name="app_name" translatable="false">ProyectoBedu</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Comfirm password</string>
    <string name="message">Here will be a list of the products</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_register">Register</string>
    <string name="welcome_act_inicio">Welcome</string>
    <string name="enter">Enter</string>
    <string name="bnt_register_r2">Register</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="enter_email">Insert your email</string>
    <string name="Product">Product</string>
    <string name="Description_frag_detail">Description</string>
    <string name="send_email_forgot">Send</string>
    <string name="price_list">$1000</string>
    <string name="image_description">--</string>
    <string name="descrition_item_contact">Description</string>
    <string name="product_item_contact">Product</string>
    <string name="tarjeta">Número de tarjeta</string>
    <string name="confirmar">Confirmar compra</string>
    <string name="user_image_header">User</string>

    <string name="delete">Borrar</string>
    <string name="share">Compartir</string>

    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>

    <string name="cuenta">Acount</string>

    <string name="drawer.payments">Pago</string>
    <string name="drawer.home">Home</string>
    <string name="drawer.settings">Configuración</string>
    <string name="drawer.extra">Extra</string>
    <string name="drawer.about">Acerca</string>
    <string name="drawer.privacy">Privacidad</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_principal">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
</resources>