<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Su compra está por terminar, ingrese sus datos"
        android:textAlignment="center"
        android:textSize="28dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_compra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Bedu.TextInputLayout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/user2"
        android:drawablePadding="12dp"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Bedu.TextInputLayout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="12dp"
        android:hint="@string/tarjeta"
        android:inputType="number"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:drawableLeft="@drawable/card"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_compra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Bedu.TextInputLayout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:drawableLeft="@drawable/lock"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_compra"
        style="@style/Bedu.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="18dp"
        />

</LinearLayout>